tests/invalid/pragma_c_code_dup_var.err_exp2
pragma_c_code_dup_var.m:025: Error: function [38;5;87m`bread_impl'/7[39;49m [38;5;203mhas no clauses.[39;49m
pragma_c_code_dup_var.m:041: In `:- pragma foreign_proc' declaration for
pragma_c_code_dup_var.m:041:   function `bread_impl'/7:
pragma_c_code_dup_var.m:041:   error: variable [38;5;87m`Buf'[39;49m [38;5;203moccurs more than once[39;49m in
pragma_c_code_dup_var.m:041:   the argument list.
